# Dracut_DS3231

./: .gitignore  Changelog  Makefile.am  NEWS  README.md  configure.ac
dracut/: Makefile.am  module-setup.sh
dracut/lcdbootmsg/: module-setup.sh
dracut/rpi-rtc-ds3231/: 60-rtc-ds3231-sync.rules  hwclock.conf  module-setup.sh
etc/: Makefile.am
lib/: Makefile.am  librpi-lcd.pc.in  rpi-lcd.c  rpi-lcd.h
src/: Makefile.am  lcdcontrol.c  lcdnetmon.c
systemd/: Makefile.am  chronyd.service  lcdbootmsg.service  lcdbootmsg.shutdown  lcdnetmon.service  openntpd.service-RESERVED
